# repo-hunter

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature-request.yml
joss/: cli.py  db.py  main.py
joss/ecosystems/api/: __init__.py  awesome.py  papers.py
joss/ecosystems/awesome/: extract.py  load.py  runner.py  transform.py
joss/ecosystems/papers/: __init__.py  extract.py  runner.py  transform.py
joss/joss/: extract.py  transform.py
rh/: __init__.py  cli.py  db.py  interfaces.py  logger.py  main.py  parsers.py  utils.py
rh/ecosystems/api/: awesome.py  papers.py
rh/ecosystems/awesome/: __init__.py  extract.py  load.py  runner.py  transform.py
rh/ecosystems/papers/: __init__.py  extract.py  load.py  runner.py  transform.py
rh/gh/: __init__.py  api.py
rh/joss/: __init__.py  extract.py  load.py  runner.py  transform.py
tests/: test_cli.py  test_gh_api.py
